# readmefy

./: .gitignore  .npmignore  .prettierrc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  action.yml  eslint.config.js  package-lock.json  package.json  readmefy-0.1.0.tgz  tsconfig.json  tsup.config.ts
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  ci.md  configuration.md  getting-started.md  templates.md
examples/cli-tool/: .env.example  README.md  package.json
examples/monorepo/: README.md  package.json
examples/nextjs-app/: .env.example  README.md  package.json
examples/npm-library/: README.md  package.json  tsconfig.json
examples/python-package/: README.md  pyproject.toml
examples/python-package/src/readmefy_pkg/: __init__.py  __main__.py  render.py
scripts/: verify-examples.ts
src/: cli.ts  index.ts
src/commands/: check.ts  doctor.ts  generate.ts  init.ts
src/config/: defaults.ts  load-config.ts
src/core/: analyze-repo.ts  collect-ci.ts  collect-cli.ts  collect-env.ts  collect-license.ts  collect-public-api.ts  collect-scripts.ts  collect-structure.ts  detect-frameworks.ts  detect-package-manager.ts  detect-project-type.ts
src/generators/: generate-badges.ts  generate-installation.ts  (+4 more)
tests/: cli.test.ts  detect-project-type.test.ts  generate-readme.test.ts  helpers.ts  integration.test.ts  load-config.test.ts  merge-readme.test.ts
(+18 files in other folders)
